<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PaymentActivity">

    <TextView
        android:id="@+id/tv_description_payment_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/description_payment_act"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_purchase_price_payment_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="@string/purchase_price"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_description_payment_activity" />

    <TextView
        android:id="@+id/tv_price_payment_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/tv_purchase_price_payment_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_purchase_price_payment_activity"
        tools:text="R$ 421,50" />

    <EditText
        android:id="@+id/et_card_number_payment_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:autofillHints="creditCardNumber"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_price_payment_activity" />

    <EditText
        android:id="@+id/et_month_payment_activity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:hint="@string/month_format_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="@id/et_card_number_payment_activity"
        app:layout_constraintTop_toBottomOf="@id/et_card_number_payment_activity" />

    <EditText
        android:id="@+id/et_year_payment_activity"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:hint="@string/year_format_credit_card_number"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="2"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="@+id/et_month_payment_activity"
        app:layout_constraintStart_toEndOf="@id/et_month_payment_activity" />

    <EditText
        android:id="@+id/et_cvc_payment_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_cvc_cartao_de_credito"
        android:hint="@string/cvc"
        android:importantForAutofill="no"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintBottom_toBottomOf="@+id/et_year_payment_activity"
        app:layout_constraintEnd_toEndOf="@id/et_card_number_payment_activity" />

    <EditText
        android:id="@+id/et_card_name_payment_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="name"
        android:hint="@string/card_name"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@id/et_cvc_payment_activity"
        app:layout_constraintStart_toStartOf="@id/et_month_payment_activity"
        app:layout_constraintTop_toBottomOf="@id/et_month_payment_activity" />

    <Button
        android:id="@+id/bt_check_out_payment_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/check_out"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintEnd_toEndOf="@id/et_card_name_payment_activity"
        app:layout_constraintStart_toStartOf="@id/et_card_name_payment_activity"
        app:layout_constraintTop_toBottomOf="@id/et_card_name_payment_activity" />

</androidx.constraintlayout.widget.ConstraintLayout>