<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.PackageSummaryActivity">

    <ImageView
        android:id="@+id/iv_package_summary_activity"
        android:layout_width="wrap_content"
        android:layout_height="140dp"
        android:contentDescription="@string/travel_package_image"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sao_paulo_sp" />

    <TextView
        android:id="@+id/tv_local_package_summary_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_package_summary_activity"
        tools:text="São Paulo" />

    <TextView
        android:id="@+id/tv_days_package_summary_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/tv_local_package_summary_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_local_package_summary_activity"
        tools:text="2 days" />

    <TextView
        android:id="@+id/tv_date_package_summary_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_price_package_summary_activity"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="@+id/tv_days_package_summary_activity"
        app:layout_constraintTop_toBottomOf="@+id/tv_days_package_summary_activity"
        tools:text="08/12 - 10/12 de 2017" />

    <TextView
        android:id="@+id/tv_price_package_summary_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:textAlignment="textEnd"
        android:textColor="@android:color/holo_green_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_date_package_summary_activity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_date_package_summary_activity"
        tools:text="R$ 243,99" />

    <TextView
        android:id="@+id/tv_final_price_package_summary_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/final_price"
        app:layout_constraintBottom_toTopOf="@+id/tv_price_package_summary_activity"
        app:layout_constraintEnd_toEndOf="@+id/tv_price_package_summary_activity" />

    <Button
        android:id="@+id/bt_make_payment_package_summary_activity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/rounded_shape"
        android:text="@string/make_payment"
        app:backgroundTint="@android:color/holo_orange_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>